# cmake_course

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
cmake/: AddGitSubmodule.cmake  Docs.cmake
configured/: config.hpp.in
docs/: Doxyfile
docs/html/: CMakeLists_8txt.html  dir_08ebf401352d0c333d3a643fc2ed36cf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  my__lib_2CMakeLists_8txt.html  my__lib_8cpp.html  my__lib_8cpp__incl.map  my__lib_8cpp__incl.md5  my__lib_8hpp.html  my__lib_8hpp__dep__incl.map  my__lib_8hpp__dep__incl.md5  my__lib_8hpp_source.html
docs/html/search/: all_2.js  all_3.js  all_4.js  files_1.js  functions_1.js  functions_2.js
src/my_lib/: CMakeLists.txt  my_lib.cpp  my_lib.hpp
tests/: CMakeLists.txt  main.cpp
